--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/react-burger-menu": "^2.6.1",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-burger-menu": "^2.7.1",
     "react-dom": "16.13.1",
+    "react-modal": "^3.11.2",
+    "react-scroll-trigger": "^0.6.7",
     "react-use": "^15.3.3"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.47",
+    "@types/react-burger-menu": "^2.6.1",
+    "@types/react-modal": "^3.10.6",
     "typescript": "^4.0.2"
   }
 }
