hero text fit test + some fixes

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hoonsubin/react-fittext": "^1.0.1",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-burger-menu": "^2.7.1",
